# tradinglib

./: README.md  meson.build
include/: asset_price.hpp  trading.hpp
src/: asset_price.cpp  meson.build
test/: asset_price_test.cpp  main_test.cpp  meson.build
